<resources>
    <string name="app_name">PunchClockV002</string>
    <string name="timerAtZero">00:00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="commit">Commit</string>
    <string name="time_main_at_zero">00:00:00</string>


    <!-- Commit Time Fragment Strings -->
    <string name="commit_time_header">Would you like to commit this time?</string>
    <string name="commit_time_confirm">Commit</string>
    <string name="commit_time_decline_resume_timer">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_database_label">Time Database</string>

    <string name="time_to_commit">00:00:00</string>

    <string name="exception_message">COMMIT TIME FRAGMENT FAILED</string>
    <string name="nuke_button">NUKE</string>
    <string name="add_category_button">Add Category</string>

</resources>
