<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/commit_time_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/commit_time_header"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/time_main_at_zero"
        android:textSize="40sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/confirm_commit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/commit_time_confirm"
            android:onClick="commitTime"/>

        <Button
            android:id="@+id/decline_commit_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commit_time_decline_resume_timer"
            android:layout_gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>