<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/timerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/timerAtZero"
        android:textColor="#009688"
        android:textSize="80sp"
        android:textStyle="bold" />

    <!--&lt;!&ndash; TOP ROW OF BUTTONS &ndash;&gt;-->
    <!---->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="10dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginTop="25dp"-->
    <!--android:layout_marginEnd="10dp"-->
    <!--android:layout_marginRight="10dp">-->
    <!---->
    <!--&lt;!&ndash; START/PAUSE BUTTON &ndash;&gt;-->

    <!--<Button-->
    <!--android:id="@+id/startButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="130dp"-->
    <!--android:layout_weight="1"-->
    <!--android:onClick="startButton"-->
    <!--android:text="@string/start" />-->
    <!---->
    <!--&lt;!&ndash;RESET BUTTON &ndash;&gt;-->
    <!---->
    <!--<Button-->
    <!--android:id="@+id/resetButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="130dp"-->
    <!--android:layout_weight="1"-->
    <!--android:onClick="resetButton"-->
    <!--android:text="@string/reset" />-->

    <!--</LinearLayout>-->
    <!---->
    <!--&lt;!&ndash; SECOND ROW OF BUTTONS &ndash;&gt;-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="10dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginTop="0dp"-->
    <!--android:layout_marginEnd="10dp"-->
    <!--android:layout_marginRight="10dp">-->
    <!---->
    <!--&lt;!&ndash; COMMIT TIME BUTTON &ndash;&gt;-->

    <!--<Button-->
    <!--android:id="@+id/sendTimeIntent"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="130dp"-->
    <!--android:layout_weight="1"-->
    <!--android:onClick="startTimeDatabase"-->
    <!--android:text="@string/save_time" />-->
    <!---->
    <!--&lt;!&ndash; PAUSE BUTTON &ndash;&gt;-->

    <!--<Button-->
    <!--android:id="@+id/pauseButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="130dp"-->
    <!--android:layout_weight="1"-->
    <!--android:onClick="pauseButton"-->
    <!--android:text="@string/pause" />-->

    <!--</LinearLayout>-->


    <!--<LinearLayout-->
        <!--android:id="@+id/commit_time_dialog_viewgroup"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:orientation="vertical"-->
        <!--tools:layout="@layout/commit_time_dialog">-->


    <!--</LinearLayout>-->

    <Button
        android:id="@+id/tempTimeDatabaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="tempTimeDataBaseButton"
        android:text="Temp button" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="startButton"
                android:text="@string/start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="resetButton"
                android:text="@string/reset"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sendTimeIntent"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_weight="50"
                android:background="@drawable/button"
                android:onClick="startTimeDatabase"
                android:text="@string/commit"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_weight="50"
                android:background="@drawable/button"
                android:onClick="pauseButton"
                android:text="@string/pause"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
        </TableRow>

    </TableLayout>


</LinearLayout>